Fixes invisible cookie consent on mobile

--- a/website/src/styles/styles.scss
+++ b/website/src/styles/styles.scss
@@ -578,7 +578,7 @@ input[type="submit"].hs-button {
     }
 }
 
-.cc-banner {
+.cc-window {
     background: $color-vaticle-purple;
     border-top: 1px solid $color-vaticle-light-purple;
     font-family: inherit;
